# clash-mg

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: quality.yml  release.yml
docs/: architecture.md  development-roadmap.md
scripts/: prepare-mihomo.mjs
src/: App.tsx  i18n.test.ts  i18n.ts  types.ts
src-tauri/: Cargo.toml  build.rs  installer-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: app_backend.toml
src-tauri/permissions/autogenerated/: open_connection_detail_window.toml  open_connections_window.toml
src-tauri/src/: app_icon.rs  app_update.rs  autostart.rs  core.rs  core_log.rs  defaults.rs  firewall.rs  lib.rs  main.rs  mihomo.rs  models.rs  running_process.rs  storage.rs  subscription.rs  system_proxy.rs  tray.rs  tun_service.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/config/: mod.rs
src-tauri/src/core/: mod.rs
src-tauri/src/platform/: mod.rs
src-tauri/src/proxy/: mod.rs
src-tauri/src/storage/: mod.rs
src-tauri/src/tray/: mod.rs
src/app/: App.tsx  queryClient.ts  routes.tsx  theme.ts
src/backend/: api.ts
src/components/: AppShell.tsx  AppUpdateChecker.tsx  Common.test.tsx  Common.tsx  IconPicker.tsx  MihomoCoreBootstrap.tsx  ProcessIcon.test.tsx  ProcessIcon.tsx  TunServiceControl.test.ts  TunServiceControl.tsx  useRuntimeMetrics.ts
src/defaults/: appDefaults.test.ts  appDefaults.ts
src/features/connections/: ConnectionsPage.tsx
src/features/dashboard/: DashboardPage.tsx
src/features/logs/: LogsPage.tsx
src/features/profiles/: ProfilesPage.tsx
src/features/proxies/: ProxiesPage.tsx
src/features/rules/: RulesPage.tsx
src/features/settings/: SettingsPage.tsx
src/layout/: AppShell.tsx  Sidebar.tsx  Topbar.tsx
src/mocks/: data.test.ts  data.ts
src/pages/: ConnectionDetailWindowPage.tsx  ConnectionsPage.tsx  DashboardPage.tsx  LogsPage.tsx  NodesPage.tsx  ProxiesPage.tsx  RulesPage.tsx  SubscriptionsPage.tsx
src/pages/settings/: SettingsPage.tsx  settingsConfig.ts
src/shared/api/: queries.ts  tauri.ts
src/shared/components/: SectionHeader.tsx  StatusPill.tsx
src/shared/hooks/: usePageTitle.ts
src/store/: runtimeSnapshot.test.ts  runtimeSnapshot.ts  useAppStore.ts
src/styles/: global.css  globals.css
src/utils/: connectionTraffic.test.ts  connectionTraffic.ts  mihomoCoreBootstrap.test.ts  mihomoCoreBootstrap.ts  nodeLatency.test.ts  nodeLatency.ts  nodeLocation.test.ts  nodeLocation.ts  proxyGroups.test.ts  proxyGroups.ts  runningProcesses.test.ts  runningProcesses.ts  runtimeMetrics.test.ts  runtimeMetrics.ts  tauri.ts  trafficHistory.test.ts  trafficHistory.ts
(+3 files in other folders)
