[package]
name = "clash-mg"
version = "0.1.0"
description = "A modern Clash desktop client prototype"
authors = ["clash-mg contributors"]
edition = "2021"

[lib]
name = "clash_mg_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
chrono = { version = "0.4.45", features = ["serde"] }
percent-encoding = "2.3.2"
reqwest = { version = "0.13.4", default-features = false, features = ["json"] }
tauri = { version = "2.11.3", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
