[package]
name = "clash-mg"
version = "0.1.0"
description = "A modern Clash desktop client prototype"
authors = ["clash-mg contributors"]
edition = "2021"

[lib]
name = "clash_mg_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
base64 = "0.22.1"
chrono = { version = "0.4.45", features = ["serde"] }
percent-encoding = "2.3.2"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls"] }
tauri = { version = "2.11.3", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["time"] }
zip = { version = "4.6.1", default-features = false, features = ["deflate-flate2-zlib-rs"] }

[target.'cfg(windows)'.dependencies]
png = "0.18.1"
winreg = "0.55.0"
windows = { version = "0.61.3", features = ["Win32_Graphics_Gdi", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }
