[package]
name = "clash-mg"
version = "0.0.2"
description = "A modern cross-platform Mihomo desktop client"
authors = ["clash-mg contributors"]
edition = "2021"

[lib]
name = "clash_mg_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
base64 = "0.22.1"
chrono = { version = "0.4.45", features = ["serde"] }
getrandom = "0.3"
percent-encoding = "2.3.2"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls"] }
regex = "1.12"
tauri = { version = "2.11.3", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["time"] }

[target.'cfg(windows)'.dependencies]
png = "0.18.1"
winreg = "0.55.0"
windows-service = "0.8"
windows = { version = "0.61.3", features = ["Win32_Graphics_Gdi", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }

[target.'cfg(unix)'.dependencies]
signal-hook = "0.3"
